# Antivirus-cpp

./: CMakeLists.txt  signatures.txt  testFile.txt  testFile2.txt
Source/: main.cpp
testFolder/: file1.txt  file2.txt  file3.txt  file4.txt  main.c
testFolder/folder_in_testFolder/: file1.txt  file2.txt  file3.txt  innerText.txt  innerText2.txt
